--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3"
 services:
   postgresql:
-    container_name: postgresql-loja
+    container_name: postgresql-blog
     image: postgres:11.2-alpine
     command: postgres -c 'max_connections=500'
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: loja
+      POSTGRES_DB: blog
     restart: always
     shm_size: "256mb"
     ports:
