fix/ add create-jwt-token

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
+    "payload": "^0.6.10",
     "pg": "^8.5.1",
     "sequelize": "^6.5.1",
     "sequelize-cli": "^6.2.0",
